--- a/initial/pcfsample-initial/manifest.yml
+++ b/initial/pcfsample-initial/manifest.yml
@@ -1,11 +1,9 @@
 ---
 applications:
-- name: myapp-tkaburagi
+- name: myapp-<name>
   memory: 512M
   instances: 1
   path: target/demo-0.0.1-SNAPSHOT.jar
-  services:
-    - redis-session
 #  env:
 #    SPRING_PROFILES_ACTIVE: cloud
 #    DEBUG: "true"
