--- a/complete/pcfsample-complete/manifest.yml
+++ b/complete/pcfsample-complete/manifest.yml
@@ -4,9 +4,9 @@ applications:
   memory: 512M
   instances: 1
   path: target/demo-0.0.1-SNAPSHOT.jar
-  services:
-    - redis-session
+#  services:
+#    - redis-session
 #  env:
 #    SPRING_PROFILES_ACTIVE: cloud
 #    DEBUG: "true"
-#    debug: "true"
+#     debug: "true"
