--- a/complete/pcfsample-complete/manifest.yml
+++ b/complete/pcfsample-complete/manifest.yml
@@ -1,12 +1,13 @@
 ---
 applications:
-- name: myapp-tkaburagi
+- name: myapp-tkaburagi-4
   memory: 512M
   instances: 1
   path: target/demo-0.0.1-SNAPSHOT.jar
-#  services:
-#    - redis-session
-#  env:
-#    SPRING_PROFILES_ACTIVE: cloud
+  services:
+    - redis-session
+    - redis-caching
+  env:
+    SPRING_PROFILES_ACTIVE: cloud
 #    DEBUG: "true"
 #     debug: "true"
