--- a/complete/pcfsample-complete/src/main/resources/application.properties
+++ b/complete/pcfsample-complete/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-#spring.redis.host=${vcap.services.redis-caching.credentials.host}
-#spring.redis.port=${vcap.services.redis-caching.credentials.port}
-#spring.redis.password=${vcap.services.redis-caching.credentials.password}
+spring.redis.host=${vcap.services.redis-caching.credentials.host}
+spring.redis.port=${vcap.services.redis-caching.credentials.port}
+spring.redis.password=${vcap.services.redis-caching.credentials.password}
